# agent-code-analyzer

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
demo-fixture/: index.html  index.php
demo-fixture/src/: app.js  util.php
docker/: qdrant-compose.yml
docs/complete/: 2026-06-14-symbol-health-validation-plan.md  2026-06-15-long-methods-design-pattern-cleanup.md  2026-06-18-semantic-algorithm-operator-guidance.md  2026-06-18-semantic-algorithm-rate-limiting-freshness.md
docs/plans/: 2026-06-14-language-attribution-plan.md  2026-06-14-persistence-and-search-roadmap.md  2026-06-14-refactor-projects-parsing-watcher.md  2026-06-15-embedding-intent-analysis-plan.md  2026-06-15-github-actions-push-merge-order.md  2026-06-15-long-methods-design-pattern-cleanup.md  ork3-eval-snapshots.jsonl  (+6 more)
frontend/: Dockerfile  composer.json  docker-compose.yml
reference/: sample_ast_skeleton.py
scripts/: hermes_one_file_harness.py  install.py  ork3_eval_snapshot.py  run_mcp.sh  run_sample.py
tests/: test_agents.py  test_config.py  test_control_api.py  test_coverage_gaps.py  test_embedding_provider.py  test_hermes_harness.py  test_ingestion_state.py  test_install_script.py  test_language_attribution.py  test_lexical_index.py  test_lexical_repository.py  test_logging_framework.py  test_projects_sqlite.py  test_rate_limit_and_freshness.py  test_restart_recovery.py  test_search_rank.py  test_semantic_agent.py  test_semantic_chunking.py  test_semantic_descriptions.py  test_server_helpers.py  test_smoke.py  test_symbol_validation.py  test_vector_index.py  test_watcher.py
(+69 files in other folders)
