[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-code-analyzer"
version = "0.1.0"
description = "Tree-sitter-powered MCP server for structural code analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.13.0",
  "tree-sitter==0.20.4",
  "tree-sitter-languages==1.10.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
agent-code-analyzer = "agent_code_analyzer.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
